fonts    solved prob :vertival align

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
       }
       .perfume {
         margin-bottom: 9px;
-        font-family: "Courier New", Courier, monospace;
+        font-family: 'Montserrat', sans-serif;
         font-weight: 600;
         font-size: 20px;
         color: grey;
@@ -47,7 +47,7 @@
       .head {
         width: 11ch;
         margin-bottom: 10px;
-        font-family: roboto;
+        font-family: 'Fraunces', serif;
         font-weight: 600;
         color: rgb(10, 10, 10);
       }
@@ -55,7 +55,7 @@
       .bodytext {
         background-color: white;
         width: 24ch;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family:'Montserrat', sans-serif;
         font-weight: 500;
         color: grey;
         font-size: 20px;
@@ -65,6 +65,7 @@
         display: flex;
         flex-direction: row;
         column-gap: 32px;
+        font-family: 'Fraunces', serif;
       }
       .pricenow {
         color: hsl(158, 36%, 37%);
